# SFML

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.43348F50FBBA7DC9.idx  sprite.hpp.9C7C3B280575FF2D.idx  sprite.hpp.A6EA533BBFDF0942.idx
include/: sprite.hpp
src/: main.cpp  sprite.hpp
